# sgx-perf

./: .gitignore  CMakeLists.txt  Doxyfile  FindLibElf.cmake  FindSGXSDK.cmake  LICENSE  README.md
analyzer/: CMakeLists.txt
analyzer/src/: calls.cpp  calls.h  graph.cpp  graph.h  main.cpp  main.h  security.cpp  security.h  synchro.cpp  synchro.h  util.cpp  util.h
common/: elfparser.cpp  elfparser.h  ini.h  rwlock.cpp  rwlock.h
examples/: CMakeLists.txt
examples/Benchmark/: CMakeLists.txt
examples/Benchmark/misc/: enclave.config.xml  enclave.edl
examples/Benchmark/src/: app.cpp  app.h  enclave.cpp  enclave.h
logger/: CMakeLists.txt
logger/src/: config.cpp  config.h  events.h  libc_calls.cpp  libc_calls.h  main.cpp  main.h  perf.cpp  perf.h  store.cpp  store.h  urts_calls.cpp  urts_calls.h
scripts/: hist.plot  plot-all.bash  scatter.plot
workingset/: CMakeLists.txt
workingset/src/: main.cpp
